# online-shop-django

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
accounts/migrations/: 0005_shippingaddress.py
accounts/templates/: edit_profile.html  login.html  manage_shipping_address.html  manager_login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  register.html
cart/: forms.py  views.py
cart/templates/: cart.html
cart/utils/: cart.py
dashboard/: forms.py  urls.py  views.py
dashboard/templates/: add_category.html  add_product.html  add_user.html  dashboard.html  edit_product.html  edit_user.html  order_detail.html  orders.html  products.html  users.html
online_shop/: asgi.py  context_processors.py  urls.py  wsgi.py
orders/: models.py  urls.py  views.py
orders/templates/: checkout.html  user_orders.html
shop/: admin.py  models.py  views.py
shop/templates/: base.html  favorites.html  home_page.html  product_detail.html
